# rialo-

./: .gitignore  CONTRIBUTING.md  OPTIMIZATION_CHECKLIST_500.md  README.md  index.html  package.json  vercel.json
assets/: i18n-CNX287aN.js  index-2N08z9BT.css  index-B-vNHHhE.css  index-B80pMiX6.js  index-BBsoXZR0.css  index-BU8h1Buc.css  index-BV8pyHns.css  index-BXl3wquX.js  index-BdY3aAZp.js  index-BfbOMEy2.js  index-BgF5Z3v7.js  index-BrbeqW_z.js  index-C1dJkdEa.js  index-CGOUWcAs.js  index-CJIsLuQX.js  index-CK2t9Y4X.js  index-CUlYBFYC.css  index-CVxugA38.css  index-C_DO-ei2.css  index-Cary32hn.js  index-Cd5ctFoQ.js  index-CdX7rN7n.css  index-CnI_C0lL.css  index-Co4kLBbX.js  index-Cpc6X4bp.js  index-D1iii4qN.js  index-D7_E8qMY.js  index-D8xy4_SU.js  index-DEo5a1F6.css  index-DgJMxai-.js  index-DjW4WPVt.js  index-DrxD4E6O.js  index-DtvkVLNJ.js  index-Dx8pyslP.js  index-TL5UFzx_.css  index-p0GbdTIt.js  index-qufPfvAW.js  index-xMaOXAXa.js  vendor-DerC8bl5.js
contracts/: Cargo.toml
docs/: ARCHITECTURE.md
files/chainsure-project/: .eslintrc.json  LICENSE  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
files/chainsure-project/contracts/: chainsure.rs
files/chainsure-project/scripts/: deploy-pages.mjs
files/chainsure-project/src/: App.tsx  main.tsx
files/chainsure-project/src/components/: NavBar.tsx  PolicyDetailPanel.tsx  SiteFooter.tsx  ui.tsx
files/chainsure-project/src/i18n/: LangContext.tsx  index.ts
files/chainsure-project/src/lib/: format.ts  (+3 more)
files_/chainsure-project/: .env.example  CONTRIBUTING.md
src/sdk/: index.ts
(+12 files in other folders)
