[package]
name = "chainsure"
version = "1.0.0"
edition = "2021"
authors = ["ChainSure Team <dev@chainsure.app>"]
description = "Decentralized Insurance Protocol on Rialo Blockchain"
license = "MIT"
repository = "https://github.com/chainsure/protocol"
keywords = ["insurance", "blockchain", "rialo", "defi", "smart-contracts"]

[lib]
crate-type = ["cdylib", "lib"]
name = "chainsure"

[dependencies]
borsh = "0.10"
# rialo-sdk = "0.2"  # Uncomment when available
# rialo-program = "0.2"

[dev-dependencies]
# rialo-program-test = "0.2"
# rialo-sdk = "0.2"

[features]
default = []
test-bpf = []
no-entrypoint = []

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
